# ynab-payee-manager

./: flake.nix  zellij_layout.kdl
ynab-payee-rs/: Cargo.toml  Dioxus.toml
ynab-payee-rs/src/: database.rs  lib.rs  main.rs  models.rs  settings.rs
