[package]
name = "ynab-payee-rs"
version = "0.1.0"
authors = ["damccull <401104+damccull@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
env = "1.0.1"
idb = "0.6.5"
reqwest = { version = "0.13.1", features = ["rustls", "json", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
wasm-bindgen = "0.2.108"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
